asm_examples/test/errors/UsingLocal.asm
asm UsingLocal

import ../../STDL/StandardLibrary

signature:
	local foo: Integer

definitions:
	
	main rule r_Main = skip

default init s0:
